# udacity-robotics-software-engineer

./: .gitignore
Project1/model/Building/: model.sdf
Project1/model/building/: model.sdf
Project1/model/robot/: model.sdf
Project1/script/: welcome_message.cpp
Project1/world/: CustomWorld  UdacityWorld
first-robot/: CMakeLists.txt
first-robot/model/my_robot/: model.config  model.sdf
first-robot/script/: hello.cpp
first-robot/world/: robot_world.sdf
